--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.6",
+    "@types/redux-logger": "^3.0.9",
     "ajas-product-card": "^1.0.0-rc",
     "antd": "^4.23.1",
     "axios": "^0.27.2",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
