--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "recharts": "^2.1.14",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.2.1",
     "reselect": "^4.1.6",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
