--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux-saga": "^1.2.1",
     "reselect": "^4.1.6",
     "typescript": "^4.4.2",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -52,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/uuid": "^8.3.4"
   }
 }
