--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@paypal/react-paypal-js": "^8.1.3",
+    "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
     "@types/redux-logger": "^3.0.9",
     "ajas-product-card": "^1.0.0-rc",
     "antd": "^4.24.0",
     "axios": "^0.27.2",
-    "node-sass": "^7.0.1",
+    "node-sass": "9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
@@ -23,11 +25,13 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.1.14",
     "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.1",
     "reselect": "^4.1.6",
     "typescript": "^4.4.2",
+    "typescript-cookie": "^1.0.6",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
   },
