--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bodega-store",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -13,8 +13,8 @@
     "@types/redux-logger": "^3.0.9",
     "ajas-product-card": "^1.0.0-rc",
     "antd": "^4.23.1",
-    "axios": "^0.27.2",
-    "node-sass": "^7.0.1",
+    "axios": "1.6.0",
+    "sass": "^1.77.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
