--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -19,6 +19,6 @@ jobs:
       - name: Install Railway
         run: npm i -g @railway/cli
       - name: Deploy
-        run: railway up
+        run: railway up --service incredible-peace
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
