--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Install Railway
         run: npm i -g @railway/cli
       - name: Deploy
-        run: railway up --service incredible-peace
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+        uses: bervProject/railway-deploy@main
+        with:
+          railway_token: ${{ secrets.RAILWAY_TOKEN }}
+          service: "incredible-peace"
