--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install Railway
         run: npm i -g @railway/cli
       - name: Deploy
-        uses: bervProject/railway-deploy@main
+        uses: hubertstefanski/action-railway@v1.1.4
         with:
           railway_token: ${{ secrets.RAILWAY_TOKEN }}
-          service: "incredible-peace"
+          railway_service: ${{ secrets.RAILWAY_SERVICE }}
