--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "bodega-store",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
+    "@tanstack/react-query": "4",
+    "@tanstack/react-query-devtools": "^5.66.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
