--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ajas-product-card": "^1.0.0-rc",
     "antd": "^4.24.0",
     "axios": "^0.27.2",
+    "sass": "^1.85.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
