--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
     "@reduxjs/toolkit": "^2.4.0",
-    "@tanstack/react-query": "4",
-    "@tanstack/react-query-devtools": "^5.66.0",
+    "@paypal/react-paypal-js": "^8.1.3",
+    "@tanstack/react-query": "^5.66.7",
+    "@tanstack/react-query-devtools": "^5.66.7",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
