--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
-    "@reduxjs/toolkit": "^2.4.0",
     "@paypal/react-paypal-js": "^8.1.3",
+    "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.4.0",
     "@tanstack/react-query": "^5.66.7",
     "@tanstack/react-query-devtools": "^5.66.7",
     "@testing-library/jest-dom": "^5.14.1",
@@ -19,6 +20,7 @@
     "ajas-product-card": "^1.0.0-rc",
     "antd": "^4.23.1",
     "axios": "^0.27.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
