--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@google-pay/button-react": "^3.1.0",
     "@paypal/react-paypal-js": "^8.1.3",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.4.0",
