--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "ajas-product-card": "^1.0.0-rc",
     "antd": "^4.23.1",
     "axios": "^0.27.2",
+    "formik": "^2.4.6",
+    "formik-antd": "^2.0.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -37,7 +39,8 @@
     "sass": "^1.81.0",
     "typescript": "^4.4.2",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
